# tonelift-chrome-ai

./: .gitignore  LICENSE  README.md  docker-compose.yml  generate_docker_configs.py  logs-policy.json  package-lock.json  package.json  task-definition.json  types.d.ts
app/: layout.tsx  page.tsx
backend/: Dockerfile  pyproject.toml  pyrightconfig.json  setup.py
backend/src/: main.py  middleware.py  models.py  processor.py
components/ui/: VoiceWaveLogo.tsx
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/ui/: VoiceProcessor.tsx
lib/: chromeAI.ts
